RESOLVED FIXED241786
Fix spelling error in remote media players
https://bugs.webkit.org/show_bug.cgi?id=241786
Summary Fix spelling error in remote media players
Youssef Soliman
Reported 2022-06-20 10:17:47 PDT
Identifier is spelt wrong in both remote media player headers.
Attachments
Youssef Soliman
Comment 1 2022-06-20 10:19:26 PDT
Radar WebKit Bug Importer
Comment 2 2022-06-20 10:19:30 PDT
EWS
Comment 3 2022-06-20 11:48:25 PDT
Committed r295676 (251681@main): <https://commits.webkit.org/251681@main> Reviewed commits have been landed. Closing PR #1639 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.