Fix spelling error in remote media players https://bugs.webkit.org/show_bug.cgi?id=241786

Patch by Youssef Soliman <youssefdevelops@gmail.com> on 2022-06-20
Reviewed by Wenson Hsieh.

The word "identifier" was spelt wrong in both remote media player
header files and some supplemental media files.

* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.h:
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::identifier const): Deleted.
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h:

Canonical link: https://commits.webkit.org/251681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295676 268f45cc-cd09-0410-ab3c-d52691b4dbfc